Fix for incorrect overflow on linux chrome

--- a/server/displaytrigger/static/projector/projector.css
+++ b/server/displaytrigger/static/projector/projector.css
@@ -2,6 +2,7 @@ body {
     background-color: black;
     font-family: sans-serif;
     cursor: none;  /* !important */
+    overflow: hidden;
 }
 
 #screen {
